# cadma-flow-api

./: .coveragerc  .env.example  .gitignore  .python-version  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requeriments.md  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
cadmaflow/: asgi.py  urls.py  wsgi.py
cadmaflow/core/: __init__.py  apps.py  urls.py  views.py
cadmaflow/data_types/: qsar.py
cadmaflow/models/: __init__.py  abstract_models.py  apps.py  choices.py  events.py  execution.py  models.py  molecule.py  providers.py  selection.py  step_execution.py  steps.py  workflow.py
cadmaflow/models/migrations/: 0001_initial.py  0002_workflow_frozen_at_workflow_frozen_by_and_more.py  0003_absorptiondata_logpdata_mutagenicitydata_and_more.py  0004_alter_workflowbranch_branch_reason.py  0005_alter_workflowbranch_branch_reason_not_null.py  0006_remove_workflow_cadmaflow_m_status_8f944d_idx_and_more.py
cadmaflow/providers/: __init__.py
cadmaflow/providers/molecule_sets/: __init__.py  base.py  implementations.py
cadmaflow/providers/molecules_set/: base.py
cadmaflow/providers/propertie_set/: base.py
cadmaflow/providers/properties_set/: __init__.py  base.py  implementations.py
cadmaflow/settings/: __init__.py  base.py  ci.py  local.py
cadmaflow/utils/: __init__.py  branching.py  serializers.py  types.py  validators.py
cadmaflow/workflows/: base.py
cadmaflow/workflows/steps/: __init__.py  base.py
tests/: test_abstract_models_extra.py  test_api_health.py  test_branching_helper.py  test_domain_core.py  test_health.py  test_models_molecule.py  test_provider_bases_extra.py  test_providers.py  test_providers_base.py  test_settings_env.py  test_settings_loader.py  test_startup.py  test_step_execution_failure.py  test_workflow_branching.py  test_workflow_flowbase.py
