[tool.poetry]
name = "cadma-flow"
version = "0.1.0"
description = "CADMA Flow Django project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "5.2.5"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.2"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
coverage = "^7.6.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cadmaflow.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=cadmaflow --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["cadmaflow"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
